Basic project setup

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,15 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+__pychach__/
+*.py[cod]
+$py.class
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
